--- a/my-website/public/index.html
+++ b/my-website/public/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=1200px, maximum-scale=1.0 ">
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  	<head>
+    	<meta charset="utf-8" />
+    	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    	<meta name="theme-color" content="#000000" />
+    	<meta name="viewport" content="width=1200px, maximum-scale=1.0 "/>
+    	<meta name="description" content="Web site created using create-react-app"/>
+    	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Tanner Oates Portfolio</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <svg version="1.1" id="febonacci" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			 viewBox="0 0 3770 2330" enable-background="new 0 0 3770 2330" xml:space="preserve">
+    	<title>Tanner Oates Portfolio</title>
+  	</head>
+  	<body>
+		  c
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+      	<div id="root"></div>
+      	<svg version="1.1" id="febonacci" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			viewBox="0 0 3770 2330" enable-background="new 0 0 3770 2330" xml:space="preserve">
 			
-			<animate xlink:href="#swirl" id="swirlStroke" attributeName="stroke-dashoffset" from="9551" to="0" dur="30s" repeatCount="1" fill="freeze" />
+	 		<animate xlink:href="#swirl" id="swirlStroke" attributeName="stroke-dashoffset" from="9551" to="0" dur="30s" repeatCount="1" fill="freeze" />
 			
 			<animate xlink:href="#box-1-a" id="box-1-a-an" attributeName="stroke-dashoffset" from="40" to="0" dur="1s" repeatCount="1" fill="freeze" />
 			<animate xlink:href="#box-1-a" id="box-1-a-an-2" attributeName="stroke-opacity" from="0" to="1" dur="0.5s" repeatCount="1" fill="freeze" />
@@ -96,6 +94,6 @@
 					c-11,0-20,9-20,20c0,16.6,13.4,30,30,30c27.6,0,50-22.4,50-50c0-44.2-35.8-80-80-80c-71.8,0-130,58.2-130,130c0,116,94,210,210,210
 					c187.8,0,340-152.2,340-340c0-303.8-246.2-550-550-550v0C398.5,0,0,398.5,0,890c0,795.3,644.7,1440,1440,1440
 					c1286.8,0,2330-1043.2,2330-2330"/>
-			</svg>
-  </body>
+		</svg>
+	</body>
 </html>
